Squash: 47ad12ffac7554a858fe90f98803631cc3c17e2f (HEAD -> try/block-controls-popover, origin/try/block-controls-popover) Move in between inserter between blocks 6e9d0bccb78364deb1bf3c2f7e0d145b0d658b37 Fix toolbar lag (do not render an inserter for all blocks) c13c7717be6323caea4155370dcceb436bd5001c Use popover for mobile toolbar 54d28d158cd2c0c2c5ad24e290b70613b4891b4b Use popover for insertion points e6bee064f1565b37f442e26c8d0c782468d934a6 Use popover for breadcrumbs 3fafe7cd38d2539261140648a78ff6be91db7cdc Use popover for BlockMultiControls da98a6f4efe92d4e67ad907bd2946cce5cfeccce Add popover corner option 05ad96c63663e3a9b94007bea310a6059ad8452d Add forceposition option 7cedca222d8d23af40d9e9c0d90d1e23ec4a3ac4 Update packages/block-editor/src/components/block-list/block.js 887d875d2e2d4ed0f2b67ccbcc33f7bc7dc5c768 Enable drag and drop fca9c222a2b45dae3fddd8eb5a7f6af7da38eda0 [WIP] Lighter block DOM: detached controls 973383856aae65cefe31555ece9f396997c06294 Adjust more CSS be48387131406def9281c308c8ea3975ec94b4be Fix CSS 5511ec1c95c78dd0224ee4577b923184dbae3e6d Adjust snapshots a65a424eb2de80e8cc1ac1b8e2a4a3281b6f732e fix focus issue 3c2e446d942a9f94759c7914727a1f3866ad4856 simplify 7389333f5e9c5f5f57620f1bfb8f891f30c980e7 wip2 14f21812b560d756136b02027e7e1db58775b979 wip

--- a/packages/block-editor/src/components/block-mover/style.scss
+++ b/packages/block-editor/src/components/block-mover/style.scss
@@ -14,11 +14,6 @@
 		&:hover {
 			box-shadow: $shadow-toolbar;
 		}
-
-		// 24px is the smallest size of a good pressable button.
-		// With 3 pieces of side UI, that comes to a total of 72px.
-		// To vertically center against a 56px paragraph, move upwards 72px - 56px / 2.
-		margin-top: -$grid-size;
 	}
 
 	&.is-horizontal {
