--- a/packages/block-editor/src/components/default-block-appender/style.scss
+++ b/packages/block-editor/src/components/default-block-appender/style.scss
@@ -62,8 +62,6 @@
 .block-editor-block-list__empty-block-inserter, // Empty paragraph
 .block-editor-default-block-appender .block-editor-inserter, // Empty appender
 .block-editor-inserter-with-shortcuts { // Right side quick shortcuts
-	position: absolute;
-	top: 0;
 
 	// Change the size of the buttons to match that of the default paragraph height.
 	.components-icon-button {
